feat: Enhance landing page with benefits section and course details
Adds a new "Benefits" section to the navigation and landing page, improving user onboarding.
Updates the "Courses" section to include more descriptive course titles and details, specifically for the IIT-JEE foundation course.
Introduces a new "glow" animation in the CSS for potential future interactive elements or visual flair.
Refactors the hero section with new background imagery and dynamic gradients for a more engaging visual experience.
Removes the "Testimonials" section from navigation and page structure, as it is no longer actively used or needed in the current iteration.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -22,12 +21,17 @@
             },
             animation: {
               'fade-in-up': 'fadeInUp 0.5s ease-out forwards',
+              'glow': 'glow 2.5s ease-in-out infinite alternate',
             },
             keyframes: {
               fadeInUp: {
                 '0%': { opacity: '0', transform: 'translateY(20px)' },
                 '100%': { opacity: '1', transform: 'translateY(0)' },
               },
+              glow: {
+                'from': { 'box-shadow': '0 0 10px -5px rgba(255, 107, 0, 0.7)' },
+                'to': { 'box-shadow': '0 0 20px 5px rgba(255, 107, 0, 0.3)' }
+              }
             },
           }
         }
