--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -11,26 +11,46 @@
         theme: {
           extend: {
             colors: {
-              'atlas-orange': '#FF6B00',
-              'atlas-black': '#0a0a0a',
-              'atlas-white': '#FFFFFF',
-              'atlas-gray': '#1a1a1a',
+              /* STRICT BRAND ENFORCEMENT: Logo Green (#10B981) Only */
+              'atlas-primary': '#10B981', /* Emerald 500 */
+              'atlas-green': '#10B981',
+              'atlas-orange': '#10B981', /* ALIASED TO GREEN - REMOVES ORANGE GLOBALLY */
+              'orange': {
+                 400: '#34D399', /* Emerald 400 */
+                 500: '#10B981', /* Emerald 500 */
+                 600: '#059669', /* Emerald 600 */
+              },
+              
+              /* Dark Theme Palette */
+              'atlas-dark': '#0B0F19', 
+              'atlas-soft': '#111827', 
+              'atlas-gray': '#1F2937', 
+              'atlas-border': '#374151', 
+              'atlas-text-main': '#F9FAFB', 
+              'atlas-text-muted': '#9CA3AF',
+              'atlas-black': '#05080F', 
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
             },
             animation: {
-              'fade-in-up': 'fadeInUp 0.5s ease-out forwards',
-              'glow': 'glow 2.5s ease-in-out infinite alternate',
+              'fade-in-up': 'fadeInUp 0.8s ease-out forwards',
+              'pulse-slow': 'pulse 6s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'float': 'float 6s ease-in-out infinite',
+              'scale-in': 'scaleIn 0.5s ease-out forwards',
             },
             keyframes: {
               fadeInUp: {
-                '0%': { opacity: '0', transform: 'translateY(20px)' },
+                '0%': { opacity: '0', transform: 'translateY(30px)' },
                 '100%': { opacity: '1', transform: 'translateY(0)' },
               },
-              glow: {
-                'from': { 'box-shadow': '0 0 10px -5px rgba(255, 107, 0, 0.7)' },
-                'to': { 'box-shadow': '0 0 20px 5px rgba(255, 107, 0, 0.3)' }
+              float: {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-15px)' },
+              },
+              scaleIn: {
+                '0%': { opacity: '0', transform: 'scale(0.9)' },
+                '100%': { opacity: '1', transform: 'scale(1)' },
               }
             },
           }
@@ -39,7 +59,7 @@
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <script type="importmap">
 {
   "imports": {
@@ -53,7 +73,7 @@
 }
 </script>
 </head>
-  <body class="bg-atlas-black text-atlas-white">
+  <body class="bg-atlas-dark text-atlas-text-main antialiased selection:bg-atlas-primary selection:text-black">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
