--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/xdCpx0Kj/Logo-new-(1).png" />
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/xdCpx0Kj/Logo-new-(1).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Atlas Classes</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -68,7 +69,8 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
     "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "axios": "https://aistudiocdn.com/axios@^1.13.2"
   }
 }
 </script>
