feat: Update favicon and apple touch icon
Replaces the existing application icons with a new favicon for improved branding and consistency.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://i.postimg.cc/xdCpx0Kj/Logo-new-(1).png" />
-    <link rel="apple-touch-icon" href="https://i.postimg.cc/xdCpx0Kj/Logo-new-(1).png" />
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/7hZVtdz9/Favicon-(without-BG)-(1).png" />
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/7hZVtdz9/Favicon-(without-BG)-(1).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Atlas Classes</title>
     <script src="https://cdn.tailwindcss.com"></script>
