feat: Integrate Supabase for authentication and data management
Replaces custom authentication logic and local storage with Supabase Auth.
Introduces `@supabase/supabase-js` for client-side interactions with Supabase.
Updates `index.html` to include the Supabase JS CDN.
Refactors `AuthContext` to use Supabase's `onAuthStateChange` for real-time authentication state.
Adjusts type definitions in `types.ts` to accommodate Supabase-related data structures and resolve export errors.
Initializes Supabase client in `AuthContext`.
Updates dashboard components (`Results.tsx` for institute and student) to fetch data via Supabase and adapt to new context structure.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
     "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "axios": "https://aistudiocdn.com/axios@^1.13.2"
+    "axios": "https://aistudiocdn.com/axios@^1.13.2",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0"
   }
 }
 </script>
