--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
@@ -71,7 +72,9 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "axios": "https://aistudiocdn.com/axios@^1.13.2",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
+    "jspdf": "https://esm.sh/jspdf@^2.5.1",
+    "html2canvas": "https://esm.sh/html2canvas@^1.4.1"
   }
 }
 </script>
